Remove Jvm arg for Security Manager